--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'java-library'
 }
 
 group = 'org.example'
@@ -10,10 +11,20 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation group: 'org.testng', name: 'testng', version: '7.4.0'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+    implementation group: 'io.appium', name: 'java-client', version: '7.6.0'
+
+    testCompileOnly  group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+    annotationProcessor  group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+    testAnnotationProcessor  group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+    // https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.8.0'
+
 }
 
 test {
-    useJUnitPlatform()
+    jvmArgs(['--add-opens', 'java.base/java.lang=ALL-UNNAMED'])
+    useTestNG()
 }
